--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
     <h1>
         All Users
     </h1>
+    <a href="/users/new">Add New User</a>
     <ul>
         <% users.forEach(user => { %>
             <li>
